tests/baselines/reference/generatorTypeCheck56.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck56.ts(3,11): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck56.ts (1 errors) ====
    function* g() {
        var x = class C {
            *[yield 0]() {
              ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                yield 0;
            }
        };
    }